internals: standardize on snake_case for all UI-facing properties and variables

--- a/src/ui/infra/AccountContext.pug
+++ b/src/ui/infra/AccountContext.pug
@@ -1,12 +1,12 @@
 script.
 	import { setContext } from 'svelte'
 	import api from '../../api/index.js'
-	contextSet = false
+	context_set = false
 	status = api.getLoginStatus()
 	if status is 'logged-in'
 		if localStorage['account.username']
 			setContext('username', localStorage['account.username'])
-			contextSet = true
+			context_set = true
 		else
 			api.watch('current_user', (x) ->
 				if x?.data?.name
@@ -16,5 +16,5 @@ script.
 
 {#if status === 'logged-out'}
 	slot
-{:else if status === 'logged-in' && contextSet}
+{:else if status === 'logged-in' && context_set}
 	slot
