--- a/src/ui/product/user/Avatar.pug
+++ b/src/ui/product/user/Avatar.pug
@@ -2,14 +2,14 @@ script.
 	import api from '../../../api/index.js'
 	import { Format } from '../../../utils/index.js'
 	export autoload = false
-	export username = null
-	deleted = username is '[deleted]'
-	userInfo = null
-	userInfoPopupVisible = false
+	export name = null
+	deleted = name is '[deleted]'
+	popup_active = false
+	user = null
 	if not deleted
 		api.watch(
-			"user:#{username.toLowerCase()}"
-			(x) -> { data: userInfo } = x
+			"user:#{name.toLowerCase()}"
+			(x) -> { data: user } = x
 			{ autoload: autoload }
 		)
 
@@ -17,16 +17,16 @@ script.
 	address.avatar
 		figure.avatar-picture-user-unknown
 {:else}
-	address.avatar(on:mouseenter={() => userInfoPopupVisible = true} on:mouseleave={() => userInfoPopupVisible = false})
-		a(href='/u/{username}')
-			img.avatar-picture(alt='' decoding='async' fetchpriority='low' loading='lazy' src={userInfo?.profile_img})
-		{#if userInfoPopupVisible}
+	address.avatar(on:mouseenter={() => popup_active = true} on:mouseleave={() => popup_active = false})
+		a(href='/u/{name}')
+			img.avatar-picture(alt='' decoding='async' fetchpriority='low' loading='lazy' src={user?.profile_img})
+		{#if popup_active}
 			.avatar-user-info-popup
-				.avatar-user-info-popup-username u/{username}
-				{#if userInfo?.created_utc}
-					.avatar-user-info-popup-cakeday Account created: {Format.time.sRelative(userInfo.created_utc)}
-				{#if userInfo?.comment_karma && userInfo?.link_karma}
-					.avatar-user-info-popup-karma {userInfo.link_karma + userInfo.comment_karma} karma ({Format.number.percent(userInfo.comment_karma, userInfo.comment_karma + userInfo.link_karma)}% comment)
+				.avatar-user-info-popup-name u/{name}
+				{#if user?.created_utc}
+					.avatar-user-info-popup-cakeday Account created: {Format.time.sRelative(user.created_utc)}
+				{#if user?.comment_karma && user?.link_karma}
+					.avatar-user-info-popup-karma {user.link_karma + user.comment_karma} karma ({Format.number.percent(user.comment_karma, user.comment_karma + user.link_karma)}% comment)
 
 style.
 	.avatar
@@ -51,5 +51,5 @@ style.
 	.avatar-user-info-popup-cakeday
 	.avatar-user-info-popup-karma
 		font 12px var(--typeface-mono)
-	.avatar-user-info-popup-username
+	.avatar-user-info-popup-name
 		font-weight bold
