--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -42,24 +42,25 @@ script.
 {#if route.path !== 'post'}
 	GlobalNavigation
 main
-	{#if route.path === 'all'}
-		Multireddit(name='all' sort={route.data.posts_sort} user_name='r')
-	{:else if route.path === 'home'}
-		Multireddit(name='home' sort={route.data.posts_sort} user_name='r')
-	{:else if route.path === 'multireddit'}
-		Multireddit(name={route.data.multireddit_name} sort={route.data.posts_sort} user_name={route.data.user_name})
-	{:else if route.path === 'popular'}
-		Multireddit(name='popular' sort={route.data.posts_sort} user_name='r')
-	{:else if route.path === 'post'}
-		Post(short_id={route.data.post_short_id} standalone={true})
-	{:else if route.path === 'subreddit'}
-		Subreddit(name={route.data.subreddit_name} sort={route.data.posts_sort})
-	{:else if route.path === 'user'}
-		User(items_filter={route.data.items_filter} items_sort={route.data.items_sort} user_name={route.data.user_name})
-	{:else if route.path === 'wiki'}
-		Wiki(page_name={route.data.page_name} revision_id={route.data.revision_id} subreddit_name={route.data.subreddit_name})
-	{:else}
-		NotImplemented(route={route})
+	{#key route}
+		{#if route.path === 'all'}
+			Multireddit(name='all' sort={route.data.posts_sort} user_name='r')
+		{:else if route.path === 'home'}
+			Multireddit(name='home' sort={route.data.posts_sort} user_name='r')
+		{:else if route.path === 'multireddit'}
+			Multireddit(name={route.data.multireddit_name} sort={route.data.posts_sort} user_name={route.data.user_name})
+		{:else if route.path === 'popular'}
+			Multireddit(name='popular' sort={route.data.posts_sort} user_name='r')
+		{:else if route.path === 'post'}
+			Post(short_id={route.data.post_short_id} standalone={true})
+		{:else if route.path === 'subreddit'}
+			Subreddit(name={route.data.subreddit_name} sort={route.data.posts_sort})
+		{:else if route.path === 'user'}
+			User(items_filter={route.data.items_filter} items_sort={route.data.items_sort} user_name={route.data.user_name})
+		{:else if route.path === 'wiki'}
+			Wiki(page_name={route.data.page_name} revision_id={route.data.revision_id} subreddit_name={route.data.subreddit_name})
+		{:else}
+			NotImplemented(route={route})
 
 style.
 	main
