--- a/src/ui/infra/Router.pug
+++ b/src/ui/infra/Router.pug
@@ -28,7 +28,9 @@ script.
 	document.addEventListener 'click', (event) ->
 		if event.button is 0 and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey)
 			link = event.target.closest('a')
-			if link then event.preventDefault()
+			if link
+				if (link.origin is origin) and (link.pathname is location.pathname) then return # allow hash change scrolling behavior
+			else event.preventDefault()
 	document.addEventListener 'keydown', (event) ->
 		if event.key is 'Enter' and not (event.altKey or event.ctrlKey or event.metaKey or event.shiftKey) and event.target.tagName is 'A'
 			link = event.target
